force-app/main/default/objects/Resource__c/Resource__c.object-meta.xml
<CustomObject>
    <description
  >A billable resource (employee or contractor) that can be assigned to engagements and work.</description>
    <label>Resource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>