force-app/main/default/objects/Resource__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the resource is currently available for assignment.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>