force-app/main/default/objects/Resource__c/fields/Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate__c</fullName>
    <description>Standard hourly bill rate for the resource.</description>
    <label>Bill Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>