force-app/main/default/objects/Resource__c/fields/Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cost_Rate__c</fullName>
    <description>Internal hourly cost of the resource.</description>
    <label>Cost Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>