force-app/main/default/objects/Resource__c/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <description
  >Gross margin percent derived from bill and cost rates. Formula field.</description>
    <formula
  >IF(OR(ISBLANK(Bill_Rate__c), Bill_Rate__c = 0), null, (Bill_Rate__c - BLANKVALUE(Cost_Rate__c, 0)) / Bill_Rate__c * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>