force-app/main/default/objects/Resource__c/fields/Weekly_Capacity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Capacity_Hours__c</fullName>
    <defaultValue>40</defaultValue>
    <description>Standard weekly capacity in hours.</description>
    <label>Weekly Capacity Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>