force-app/main/default/objects/Resource__c/recordTypes/Contractor.recordType-meta.xml
<RecordType>
    <fullName>Contractor</fullName>
    <active>true</active>
    <description
  >External contractor resource, optionally linked to a Contact.</description>
    <label>Contractor</label>
</RecordType>