force-app/main/default/objects/Resource__c/recordTypes/Employee.recordType-meta.xml
<RecordType>
    <fullName>Employee</fullName>
    <active>true</active>
    <description
  >Internal employee resource linked to a Salesforce user.</description>
    <label>Employee</label>
</RecordType>